[tool.poetry]
name = "tembo"
description = "A simple folder organiser for your work notes."
version = "0.0.8"
license = "ISC"
authors = ["dtomlinson <dtomlinson@panaetius.co.uk>"]
readme = "./README.md"
homepage = "https://tembo-pages.github.io/tembo-core/"
repository = "https://github.com/tembo-pages/tembo-core/"
documentation = "https://tembo-pages.github.io/tembo-core/"
keywords = ["notes", "organisation", "work"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
pendulum = "^2.1.2"
Jinja2 = "^3.0.2"
panaetius = "^2.3.2"
# panaetius = { path = "../../panaetius", develop = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"
pytest-custom-exit-code = "^0.3.0"
coverage = "^6.0.2"
prospector = { extras = ["with_bandit", "with_mypy"], version = "^1.5.1" }
duty = "^0.7.0"
pyinstaller = "^4.5.1"
isort = "^5.10.0"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"
mkdocstrings = "^0.16.2"
mkdocs-gen-files = "^0.3.3"
mkdocs-literate-nav = "^0.4.0"
mkdocs-coverage = "^0.2.4"
mkdocs-click = "^0.4.0"
mypy = "^0.910"
safety = "^1.10.3"
git-changelog = "^0.5.0"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"tembo" = "tembo.cli.cli:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "duty"
include_trailing_comma = true
